--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="max-container">
       <nav>
         <a class="btn --bg_orange sola_kaydir" href="#">Gezinizi Planlayın</a>
-        <a class="btn" href="#">Bilgi edinin </a>
+        <a class="btn" href="info.html">Bilgi edinin </a>
         <a class="btn --bg_yellow saga_kaydir" href="#">Karşılaştırın</a>
       </nav>
       <div class="intro">
@@ -66,12 +66,12 @@
         </p>
       </div>
     </div>
-    <footer>
+    <footer class="max-container">
       <img src="./assets/footer_img.jpg" alt="" />
       <div class="max-container">
         <nav>
           <a class="btn --bg_orange sola_kaydir" href="#">Gezinizi Planlayın</a>
-          <a class="btn" href="#">Bilgi edinin </a>
+          <a class="btn" href="info.html">Bilgi edinin </a>
           <a class="btn --bg_yellow saga_kaydir" href="#">Karşılaştırın</a>
         </nav>
       </div>
